          - mobile:
            - fix compatibility issue with jquery 3.x
          - Business Process:
            - fix filtering containing spaces
            - allow drill down when integrated in panorama dashboards
          - Panorama:
            - add option to always hide widget border
            - increase max zoom level for default geo map
          - Config Tool:
            - add disable option to disable config tool for specific backends
            - add global obj_readonly option
          - Logcache:
            - disable delta updates by default
          - internals:
            - update jquery to 3.4.1

2.28     Fri Mar 29 17:27:48 CET 2019
          - rename graph_proxy option into http_backend_reverse_proxy
          - add `tree` sitepanel for very large setups with many sites
          - add parents to selectable columns
          - add option to store selected backends along with a bookmark
          - add support for dependencies (naemon only)
          - add host alias to exportable columns
          - add eventhandler quick commands
          - fix offset calculation in rest api
          - fix page not found issue when using browser history back
          - fix cross site scripting issues
          - REST:
            - add aggregation function support
            - add cmd to remove all active downtimes for host or service
            - add more external commands
          - Config Tool:
            - add authorization tab to contacts and contactgroups
            - add support for dependencies and escalations
          - Business Process:
            - delay calculation during core reloads
            - add support for http federation
            - add drill down output as default filter
            - fix zooming in chrome
            - disable automatic calculation by setting refresh_interval to zero
            - add read_only mode
            - add `post_refresh_cmd` hook
            - use paging when having many business processes