@@ -136,6 +136,7 @@ our %config = ('name'                   => 'Thruk',
                                           'auto_reload_fn' => '',
                                           'page'           => '',
                                           'title'          => '',
+                                          'extrahtmlclass' => '',
                                           'extrabodyclass' => '',
                                           'remote_user'    => '?',
                                           'infoBoxTitle'   => '',
